Finetuning Typewriter, adding information to projects

--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // COLORS
-$primary-color: #B11900;
-$secondary-color: #CA1E00;
+$primary-color: #D31027;
+$secondary-color: #EA384D;
 
 // $primary-color: #7f449d;
 // $secondary-color: #793fc1;
